--- a/current.css
+++ b/current.css
@@ -403,3 +403,80 @@
     background: var(--color-3);
     color: var(--color-0);
 }
+
+.root_bfe55a{
+    background: none;
+}
+
+.wrapper_cb9592 {
+    background: none;
+}
+
+.background_fb62e2, .tile__2f4f7, .idle__2f4f7, .tile__90dc5 {
+    background: none !important;
+    border-color: var(--color-1);
+}
+
+
+.border__2f4f7.speaking__2f4f7 {
+    box-shadow: none !important;
+}
+
+
+.tileChild__2f4f7:has(> .border__2f4f7) 
+  .background_fb62e2 .wrapper__44b0c {
+    transform: scale(1);
+    border-radius: 99px;
+    transition: transform 0.1s ease-out, filter 0.1s ease-out;
+    filter: opacity(0.4) drop-shadow(0 0 0px var(--color-3));
+}
+
+.tileChild__2f4f7:has(> .border__2f4f7.speaking__2f4f7) 
+  .background_fb62e2 .wrapper__44b0c {
+  
+  /* Tes styles quand border a la classe speaking */
+  transform: scale(1.3);
+  filter: opacity(1) drop-shadow(0 0 20px var(--color-3));
+  border-radius: 99px;
+}
+
+/* .tile_d6271c {
+    width: 150px !important;
+} */
+
+.tabBody__133bf {
+    background: none !important;
+}
+
+.container__133bf {
+    background: none !important;
+    border: none !important;
+}
+
+.tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf {
+    background-color: var(--color-2);
+    color: var(--color-0)
+}
+
+.menu_c1e9c4 {
+    background-color: var(--background-floating);
+}
+
+.container__7d20c, .nowPlayingColumn__133bf {
+    background: none;
+    border: none;
+}
+
+.container__7d20c:hover, .nowPlayingColumn__133bf:hover {
+    background: none;
+    border: none;
+}
+
+.itemCard__7e549, .section__00943 {
+    background: none;
+    border: none;
+}
+.outer_bf1984.active_bf1984, .outer_bf1984.interactive_bf1984:hover {
+    background-color: var(--background-base-lowest);
+    border: none;
+}
